CRISv32: irq.c - Move end brace outside #endif

The end brace for a larger for statement was placed inside the #else
part of #ifdef TIMER_VECT1. However, for all current chips, the
define TIMER_VECT1 is always unset, and the error was never triggered.

Move the brace down below the #endif.

Fixes:
http://bugzilla.kernel.org/show_bug.cgi?id=13476

Reported-by: Martin Ettl <ettl.martin@gmx.de>
Signed-off-by: Jesper Nilsson <jesper.nilsson@axis.com>
Acked-by: Mikael Starvik <mikael.starvik@axis.com>